--- a/src/TinyBlazorAdmin/wwwroot/appsettings.json
+++ b/src/TinyBlazorAdmin/wwwroot/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AzureAd": {
     "Authority": "https://login.microsoftonline.com/206bad4c-d071-4c91-9181-ef7047e6590b",
-    "ClientId": "737debc6-39bb-4e71-8c3e-27bdf3b18846",
+    "ClientId": "94ac143c-49fc-469e-b3fc-c3cd61cec127",
     "ValidateAuthority": true
   },
   "UrlShortenerSecuredService": {
-    "Endpoint": "https://azshorterdevrtm3e.azurewebsites.net/"
+    "Endpoint": "https://urlshortenertoolscluzq.azurewebsites.net/"
   },
   "DetailedErrors":true
 }
